# service/api/18.getLikeList.go
@@ -1,86 +1,0 @@
-package api
-
-/*
-go run ./cmd/webapi/
-curl -v \
-	-X GET \
-	-H 'Authorization: 1' \
-	localhost:3000/photos/{1}/likes/
-*/
-
-import (
-	"encoding/json"
-	"net/http"
-	"strconv"
-
-	"github.com/annafabia03/WASA23/service/api/reqcontext"
-	"github.com/julienschmidt/httprouter"
-)
-
-func (rt *_router) getLikesList(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-
-	var token uint64
-	token, err := strconv.ParseUint(r.Header.Get("Authorization"), 10, 64)
-
-	// Unauthorized check
-	if err != nil {
-		stringErr := "getLikesList: invalid authorization token"
-		http.Error(w, stringErr, http.StatusUnauthorized)
-		return
-	}
-	requestingUser, present, err := rt.db.GetUserByID(token)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-	if !present {
-		stringErr := "getLikesList: authorization token not matching any existing user"
-		http.Error(w, stringErr, http.StatusUnauthorized)
-		return
-	}
-
-	var pathPid uint64
-	pathPid, err = strconv.ParseUint(ps.ByName("pid"), 10, 64)
-
-	// BadRequest check
-	if err != nil {
-		stringErr := "getLikesList: invalid path parameter pid"
-		http.Error(w, stringErr, http.StatusBadRequest)
-		return
-	}
-	photo, present, err := rt.db.GetPhotoByID(pathPid)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-	if !present {
-		stringErr := "getLikesList: path parameter pid not matching any existing photo"
-		http.Error(w, stringErr, http.StatusBadRequest)
-		return
-	}
-
-	// Forbidden check
-	someoneIsBanned, err := rt.db.CheckBan(requestingUser.ID, photo.OwnerID)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-	if someoneIsBanned {
-		stringErr := "getLikesList: someone has banned the other"
-		http.Error(w, stringErr, http.StatusForbidden)
-		return
-	}
-
-	// database section
-	likesList, err := rt.db.GetLikesList(photo.ID)
-
-	// InternalServerError check
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(likesList)
-}
